# solar_project

./: Dockerfile  README.md  pyproject.toml  solar.db
app/: battery.py  controller.py  database.py  main.py  solar.py
frontend/: index.html  script.js  style.css
