[project]
name = "solar-project"
version = "0.1.0"
description = "Solar energy calculation project"
authors = [
    {name = "Sehriyar Molemov"}
]
license = {text = "MIT"}
requires-python = "^3.12"
dependencies = [
    "pvlib (>=0.15.0,<0.16.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "solar-project"
version = "0.1.0"
description = ""
authors = ["Your Name"]

packages = [
    { include = "app" }
]
